# shisho

./: Cargo.toml  README.md  create_deck.graphql  get_deck.graphql  new_deck.graphql  obtain_deck.graphql  popular_decks.graphql  queries.graphql  remove_deck.graphql  schema.graphql
src/: client.rs  main.rs  styling.rs
