[package]
name = "shisho"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = {git = "https://github.com/iced-rs/iced", features = ["debug", "tokio"]}

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json"]

[dependencies.graphql_client]
version = "0.11.0"
features = ["reqwest"]
