[package]
name = "shisho"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = {version = "0.5.2", features = ["debug", "tokio"]}

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serde_json]
version = "1.0.89"

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json"]

[dependencies.graphql_client]
version = "0.11.0"
features = ["reqwest"]

[dependencies.iced_aw]
git = "https://github.com/iced-rs/iced_aw"
features = ["modal", "card"]
